# FREEd6

./: .gitignore  .pre-commit-config.yaml  02_character_creation.md  03_how_to_play.md  04_magic.md  05_monsters.md  Makefile  README.md  appendix_a_converting_monsters.md  appendix_b_experimental_optional_rules.md  changelog.md  index.html  pyproject.toml
d666_rpg_system/: data.py
docs/: chargen.html  index.html
html/: chargen.html  free_d6.css  index.html
rules/: 01_introduction.md  05_monsters.md
rules/book1/: 01_introduction.md  02_character_creation.md  03_how_to_play.md  04_magic.md
rules/book2/: 05_monsters.md  06_treasures.md
rules/book3/: appendix_b_optional_rules.md  appendix_c_d666_spells.md
rules/misc/: appendix_b_optional_rules.md  hex_crawling.md
scripts/: spells_chart.py
src/free_d6/: char.py
