[build-system]
requires = ["setuptools>=69.0.3", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "free_d6"
description = "The FREEd6 RPG System"
readme = "README.md"
authors = [{name = "Jeremy Deram"}]
urls = {homepage = "https://github.com/jderam/FREEd6"}
license = {file = "LICENSE"}
keywords = [
    "FREEd6",
    "RPG",
    "Dungeons",
    "Dragons",
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Operating System :: OS Independent",
]
dynamic = [
    "version",
]
requires-python = ">=3.8"
dependencies = []

[project.optional-dependencies]
dev = [
    "build",
    "pre-commit",
    "pytest",
    "pytest-cov",
    "ruff",
    "twine",
]

[tool.setuptools.dynamic]
version = {attr = "free_d6.__version__"}

[tool.setuptools.packages.find]
where = [
    "src",
]
exclude = [
    "html",
    "rules",
    "tests",
]

[tool.ruff]
select = ["E", "F"]
exclude = []
line-length = 100
indent-width = 4
target-version = "py312"

[tool.ruff.lint]
fixable = ["ALL"]
unfixable = []

[tool.ruff.per-file-ignores]
"src/free_d6/data.py" = ["E501"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
docstring-code-format = false

[tool.pytest.ini_options]
addopts = "--cov=free_d6"
testpaths = ["tests"]
markers = [
    "repeat: repeats a test n times",
]
